b=328241, antialiasing problem with joining borders, temporary diable-aa fix for non-rounded borders, r=dbaron